--- a/js-game-keep-white-space-b5d8b7d35857d4df4a3d85a9fa65aa4217e11757/index.html
+++ b/js-game-keep-white-space-b5d8b7d35857d4df4a3d85a9fa65aa4217e11757/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
@@ -29,6 +29,6 @@
 	</head>
 	<body>
 		<div id="gamepanel"></div>
-		<script src="main.js"></script>
+		<script src="main.js" type="module"></script>
 	</body>
 </html>
