--- a/js13k-2021-fd4b9e6e1954b8850125c0a7a0219db0607bf37e/index.html
+++ b/js13k-2021-fd4b9e6e1954b8850125c0a7a0219db0607bf37e/index.html
@@ -96,7 +96,9 @@
     <div class="r">&#11041;</div>
     <div class="h"></div>
     <div class="s"></div>
-    <div class="e" hidden>
+    <div class="e" style="display: none;">
+    <div class="hs">High scores:
+    </div>
       <div>Game over</div><button class="n" onclick="location.reload()">Restart</button>
     </div>
     <script type="module" src="./src/index.js"></script>
